added data with party as new column

--- a/timeseries.ipynb
+++ b/timeseries.ipynb
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "polar-dance",
+   "id": "concerned-dress",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "cultural-startup",
+   "id": "democratic-plaza",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "brutal-funds",
+   "id": "facial-regulation",
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "continued-tolerance",
+   "id": "governing-marks",
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "cutting-induction",
+   "id": "intense-albuquerque",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "charitable-robertson",
+   "id": "identified-local",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "sealed-driving",
+   "id": "promising-meditation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "quantitative-checkout",
+   "id": "lyric-liver",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "aerial-vinyl",
+   "id": "unique-potato",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "starting-edinburgh",
+   "id": "capable-phoenix",
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "conscious-designer",
+   "id": "guided-twins",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "cellular-hindu",
+   "id": "smoking-canberra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loved-system",
+   "id": "ongoing-respondent",
    "metadata": {},
    "source": [
     "#Missing entries\n",
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "unknown-reporter",
+   "id": "accompanied-handle",
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "cross-vanilla",
+   "id": "talented-mountain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2115,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "occupied-straight",
+   "id": "composed-kidney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2127,7 +2127,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "surgical-edward",
+   "id": "danish-vietnam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2137,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "local-league",
+   "id": "operational-there",
    "metadata": {},
    "outputs": [
     {
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "limiting-reunion",
+   "id": "relevant-graduate",
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "numeric-escape",
+   "id": "dominican-encounter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2558,8 +2558,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 204,
+   "id": "owned-constitutional",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>text</th>\n",
+       "      <th>type</th>\n",
+       "      <th>election_year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John Kennedy</td>\n",
+       "      <td>I uh – said that Ive served this country for f...</td>\n",
+       "      <td>Pres</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>1960-10-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John Kennedy</td>\n",
+       "      <td>Mr. Howe, Mr. Vice President. First uh – let m...</td>\n",
+       "      <td>Pres</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>1960-10-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Richard Nixon</td>\n",
+       "      <td>Mr. Howe, Senator Kennedy, my fellow Americans...</td>\n",
+       "      <td>Pres</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>1960-10-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>John Kennedy</td>\n",
+       "      <td>Good evening, Mr. Howe.</td>\n",
+       "      <td>Pres</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>1960-10-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Richard Nixon</td>\n",
+       "      <td>Good evening, Mr. Howe.</td>\n",
+       "      <td>Pres</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>1960-10-21</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         speaker                                               text  type  \\\n",
+       "0   John Kennedy  I uh – said that Ive served this country for f...  Pres   \n",
+       "1   John Kennedy  Mr. Howe, Mr. Vice President. First uh – let m...  Pres   \n",
+       "2  Richard Nixon  Mr. Howe, Senator Kennedy, my fellow Americans...  Pres   \n",
+       "3   John Kennedy                            Good evening, Mr. Howe.  Pres   \n",
+       "4  Richard Nixon                            Good evening, Mr. Howe.  Pres   \n",
+       "\n",
+       "   election_year        date  candidate  result  \n",
+       "0         1960.0  1960-10-21        1.0       1  \n",
+       "1         1960.0  1960-10-21        1.0       1  \n",
+       "2         1960.0  1960-10-21        1.0       0  \n",
+       "3         1960.0  1960-10-21        1.0       1  \n",
+       "4         1960.0  1960-10-21        1.0       0  "
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfnew.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "wired-fields",
+   "id": "monetary-business",
    "metadata": {},
    "outputs": [],
    "source": []
